@@ -1,0 +1,167 @@
+{
+  "disclaimer": "This data is collected from various providers and provided free of charge for informational purposes only, with no guarantee whatsoever of accuracy, validity, availability or fitness for any purpose; use at your own risk. Other than that - have fun, and please share/watch/fork if you think data like this should be free!",
+  "license": "Data collected from various providers with public-facing APIs; copyright may apply; not for resale; no warranties given.",
+  "timestamp": 1332070464,
+  "base": "USD",
+  "rates": {
+    "AED": 3.6732,
+    "AFN": 48.299999,
+    "ALL": 105.919998,
+    "AMD": 388.890015,
+    "ANG": 1.79,
+    "AOA": 94.769997,
+    "ARS": 4.35,
+    "AUD": 0.943931,
+    "AWG": 1.7899,
+    "AZN": 0.7863,
+    "BAM": 1.48775,
+    "BBD": 2,
+    "BDT": 82,
+    "BGN": 1.4962,
+    "BHD": 0.37703,
+    "BIF": 1304.170044,
+    "BMD": 1,
+    "BND": 1.2575,
+    "BOB": 6.91,
+    "BRL": 1.8003,
+    "BSD": 1,
+    "BTN": 50.185001,
+    "BWP": 7.2307,
+    "BYR": 8150,
+    "BZD": 1.9135,
+    "CAD": 0.9921,
+    "CDF": 917.276917,
+    "CHF": 0.9164,
+    "CLF": 0.02146,
+    "CLP": 482.75,
+    "CNY": 6.3239,
+    "COP": 1760,
+    "CRC": 507.600006,
+    "CUP": 1,
+    "CVE": 84.190002,
+    "CZK": 18.606001,
+    "DJF": 179.490005,
+    "DKK": 5.64424,
+    "DOP": 39.025002,
+    "DZD": 74.544998,
+    "EGP": 6.0385,
+    "ETB": 17.720449,
+    "EUR": 0.758956,
+    "FJD": 1.7734,
+    "FKP": 0.6316,
+    "GBP": 0.631373,
+    "GEL": 1.6469,
+    "GHS": 1.7455,
+    "GIP": 0.63165,
+    "GMD": 31.5,
+    "GNF": 7100,
+    "GTQ": 7.6975,
+    "GYD": 203.699997,
+    "HKD": 7.76306,
+    "HNL": 19.055,
+    "HRK": 5.7333,
+    "HTG": 41,
+    "HUF": 219.850006,
+    "IDR": 9118,
+    "IEP": 0.5978,
+    "ILS": 3.7542,
+    "INR": 50.165001,
+    "IQD": 1165.5,
+    "IRR": 12308,
+    "ISK": 127.440002,
+    "JMD": 86.699997,
+    "JOD": 0.7095,
+    "JPY": 83.445,
+    "KES": 83.18,
+    "KGS": 46.699402,
+    "KHR": 4010.300049,
+    "KMF": 373.424255,
+    "KPW": 900,
+    "KRW": 1125.849976,
+    "KWD": 0.27925,
+    "KZT": 147.690002,
+    "LAK": 7993.799805,
+    "LBP": 1504,
+    "LKR": 125.224998,
+    "LRD": 73.459999,
+    "LSL": 7.5768,
+    "LTL": 2.6219,
+    "LVL": 0.5291,
+    "LYD": 1.2572,
+    "MAD": 8.4611,
+    "MDL": 11.89,
+    "MGA": 2155,
+    "MKD": 46.705002,
+    "MMK": 6.51,
+    "MNT": 1322.5,
+    "MOP": 7.9958,
+    "MRO": 293,
+    "MUR": 29.110001,
+    "MVR": 15.36,
+    "MWK": 165.206207,
+    "MXN": 12.6745,
+    "MYR": 3.0575,
+    "MZN": 27.200001,
+    "NAD": 7.58,
+    "NGN": 157.600006,
+    "NIO": 23.215,
+    "NOK": 5.73163,
+    "NPR": 80.620003,
+    "NZD": 1.212269,
+    "OMR": 0.38485,
+    "PAB": 1,
+    "PEN": 2.674,
+    "PGK": 2.0627,
+    "PHP": 43.02,
+    "PKR": 90.800003,
+    "PLN": 3.1285,
+    "PYG": 4245,
+    "QAR": 3.6415,
+    "RON": 3.3256,
+    "RSD": 84.100502,
+    "RUB": 29.2342,
+    "RWF": 606.717468,
+    "SAR": 3.7505,
+    "SBD": 7.075973,
+    "SCR": 14.0447,
+    "SDG": 2.6765,
+    "SEK": 6.74525,
+    "SGD": 1.258,
+    "SHP": 0.63165,
+    "SLL": 4364.5,
+    "SOS": 1629,
+    "SRD": 3.2875,
+    "STD": 18650,
+    "SVC": 8.7475,
+    "SYP": 57.450001,
+    "SZL": 7.5752,
+    "THB": 30.700001,
+    "TJS": 4.7588,
+    "TMT": 2.85,
+    "TND": 1.5178,
+    "TOP": 1.693601,
+    "TRY": 1.796,
+    "TTD": 6.40015,
+    "TWD": 29.532,
+    "TZS": 1595,
+    "UAH": 8.029,
+    "UGX": 2481.699951,
+    "USD": 1,
+    "UYU": 19.469999,
+    "UZS": 1835.75,
+    "VEF": 4.295,
+    "VND": 20820,
+    "VUV": 90.199997,
+    "WST": 2.247475,
+    "XAF": 497.898987,
+    "XCD": 2.7,
+    "XDR": 0.652794,
+    "XOF": 498.399994,
+    "XPF": 90.639999,
+    "YER": 216.005005,
+    "ZAR": 7.5688,
+    "ZMK": 5271.5,
+    "ZWD": 378.700012,
+    "ZWL": 322.355011
+  }
+}
